slider reduce text on mobile / index page/ fix links on slider-brands

--- a/src/sass/global/news-slider.scss
+++ b/src/sass/global/news-slider.scss
@@ -38,5 +38,9 @@
 		padding: 1rem;
 		margin-bottom: 0;
 		margin-top: 0;
+		@media (max-width: $screen-sm-max){
+			padding: 1rem 50px;
+			font-size: $font-size-h5;
+		}
 	}
 }
